--- a/timer/timer.html
+++ b/timer/timer.html
@@ -1,4 +1,4 @@
-<html><head><link rel="stylesheet" type="text/css" href="http://home.helenbot.com/style/timer.css" title="style"><style>
+<html><head><link rel="stylesheet" type="text/css" href="https://lest-day.github.io/timer/timer.css" title="style"><style>
 .smalltext{
 font-size: .8em;
 }
