--- a/定时器/timer.html
+++ b/定时器/timer.html
@@ -26,7 +26,7 @@ font-size: .8em;
     </div>
     <span id="message"></span>
 </div>
-
+ 
 <script>
     function getTimeRemaining(endtime) {
         var t = Date.parse(endtime) - Date.parse(new Date());
@@ -48,7 +48,7 @@ font-size: .8em;
             'up' : up
         };
     }
-
+ 
     function initializeClock(endtime, type) {
         if(type == "del"){
             document.getElementById("topMessage").innerHTML = "本文将在以下时间后被删除";
@@ -58,18 +58,16 @@ font-size: .8em;
             var typetext = type.split("%20");
             document.getElementById("topMessage").innerHTML = typetext.join(" ");
         }
-
-
+ 
         var clock = document.getElementById('clockdiv');
         var daysSpan = clock.querySelector('.days');
         var hoursSpan = clock.querySelector('.hours');
         var minutesSpan = clock.querySelector('.minutes');
         var secondsSpan = clock.querySelector('.seconds');
-
+ 
         function updateClock() {
             var t = getTimeRemaining(endtime);
-
-
+ 
             if (t.up) {
                 daysSpan.innerHTML = t.days;
                 daysSpan.style.color = "green";
@@ -79,18 +77,18 @@ font-size: .8em;
                 minutesSpan.style.color = "green";
                 secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
                 secondsSpan.style.color = "green";
-
+ 
                 if(type == "del"){
-                    document.getElementById("topMessage").innerHTML = "本文已经超过符合被删除期限";
+                    document.getElementById("topMessage").innerHTML = "本文章已经超过符合被删除期限";
                     document.getElementById("topMessage").style.color = "green";
                     document.getElementById("message").style.display = "none";
-
+ 
                 }else if(type == "ban"){
                     document.getElementById("topMessage").innerHTML = "本用户已经超过期限符合被解封"
                     document.getElementById("messsage").style.color = "green";
                     document.getElementById("message").style.display = "none";
                 } else {
-                    document.getElementById("topMessage").innerHTML = "本计时器已经到时间了";
+                    document.getElementById("topMessage").innerHTML = "本计时器已经到时间";
                     document.getElementById("messsage").style.color = "green";
                     document.getElementById("message").style.display = "none";
                 }
@@ -101,12 +99,12 @@ font-size: .8em;
                 secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
             }
         }
-
+ 
         updateClock();
         var timeinterval = setInterval(updateClock, 1000);
-
+ 
     }
-
+ 
     function getUrlVars() {
         var vars = {};
         var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
@@ -118,4 +116,5 @@ font-size: .8em;
     var type = decodeURIComponent(getUrlVars()["type"]);
     var deadline = new Date(time);
     initializeClock(deadline, type);
-</script></body></html>
+</script>
+</body></html>
