--- a/timer/timer-selector.html
+++ b/timer/timer-selector.html
@@ -1,1 +1,8 @@
-
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="https://lest-day.github.io/timer/timer.css" title="style">
+</head>
+  <div>
+    timer
+  </div>
+</html>
