--- a/timer/timer-selector.html
+++ b/timer/timer-selector.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="https://lest-day.github.io/timer/timer.css" title="style">
+  <link rel="stylesheet" href="https://lest-day.github.io/timer/timer-selector.css">
 </head>
   <div>
     timer
