--- a/timer/timer-selector.html
+++ b/timer/timer-selector.html
@@ -3,6 +3,6 @@
   <link rel="stylesheet" href="https://lest-day.github.io/timer/timer-selector.css">
 </head>
   <div>
-    timer
+    <h1>时间轴书店（TLB）计时器工具</h1>
   </div>
 </html>
