--- a/timer/timer-selector.html
+++ b/timer/timer-selector.html
@@ -6,14 +6,11 @@
   <div>
     <h3>TLB维基计时器工具</h3>
     <h5>编辑者：lest-day ——来源于<a href="http://lest-day.github.io/timer/timer-selector.html">此网站</a></h5>
-  </div>
-  
-  
-  
-  
-  
-  
-  <div>
-    <p>此计时器工具适用于CC BY-SA 3.0授权协议，你可以在使用相同授权方式、署名并且遵守授权协议的情况下，任意修改、改作、复制甚至商用此计时器工具。</p>
+    
+    <h4>计时器类型</h4>
+    <h4>计时器类型</h4>
+    <h4>计时器类型</h4>
+    
+    <div style="font-size:85px">此计时器工具适用于CC BY-SA 3.0授权协议，你可以在使用相同授权方式、署名并且遵守授权协议的情况下，任意修改、改作、复制甚至商用此计时器工具。</div>
   </div>
 </html>
