--- a/timer/timer-selector.html
+++ b/timer/timer-selector.html
@@ -17,6 +17,68 @@
     <h4>样式设置</h4>
       <p>高度：</p>
       <p>宽度：</p>
+    
+    <br><br><button id="copy">复制</button>
+<script>
+const templates = [];
+ 
+const $timer = document.getElementById("select-timer");
+const $msg = document.getElementById("generic-msg");
+$timer.onchange = () => {
+  if ($timer.value == "generic")
+    $msg.classList.remove('hidden');
+  else
+    $msg.classList.add('hidden');
+}
+const $start = document.getElementsByClassName("start");
+const $startTime = document.getElementById("start-time");
+$startTime.value = new Date(Date.now()).toISOString().replace('T',' ').match(/[^.]+/);
+var startNow = true;
+[].forEach.call($start, (v,i)=>{
+    v.onclick = function(){
+    $start[i].classList.add('selected');
+    $start[1 - i].classList.remove('selected');
+    startNow = !i;
+    $startTime.style.display = startNow ? 'none' : '';
+  }
+});
+function startTime() {
+  return startNow ? Date.now() : Date.parse($startTime.value);
+}
+const $duration = document.getElementsByClassName("duration");
+const $durationTime = document.getElementById("duration-time");
+var durationSel = 0;
+[].forEach.call($duration, (v,i)=>{
+    v.onclick = function(){
+    $duration[durationSel].classList.remove('selected');
+    $duration[i].classList.add('selected');
+    durationSel = i;
+    $durationTime.style.display = durationSel == $duration.length - 1 ? '' : 'none';
+  }
+})
+const $templates = document.getElementsByClassName("templates");
+const $template = document.getElementById("template");
+$template.onchange=()=>{
+  for (var el of $templates)
+    el.style.display = 'none';
+  $templates[$template.value].style.display = '';
+}
+function tick(){
+document.getElementById("output").innerHTML = `time=${startTime() + 3600000 * [1,24,48,72,+$durationTime.value][durationSel]}&type=${$timer.value == "generic" ? $msg.value.replace(/ /g,'%20') : $timer.value}`
+requestAnimationFrame(tick);
+}
+tick()
+document.getElementById("copy").onclick = function(){
+        var textarea = document.createElement("textarea");
+        textarea.textContent = document.getElementById("copyarea").textContent;
+        textarea.style.position = "fixed";
+        document.body.appendChild(textarea);
+        textarea.select();
+        document.execCommand("copy");
+        textarea.remove();
+}
+</script>
+    
     <hr>
     <p style="font-size:8px">此计时器工具适用于CC BY-SA 3.0授权协议，你可以在使用相同授权方式、署名并且遵守授权协议的情况下，任意修改、改作、复制甚至商用此计时器工具。</p>
   </div>
