--- a/timer/timer-selector.html
+++ b/timer/timer-selector.html
@@ -12,13 +12,22 @@
       <input name="type" type="radio" value="del">删除
       <input name="type" type="radio" value="ban">封禁
       <input name="type" type="radio" value="generic">自定义
+    <h4>计时原因</h4>
+      
     <h4>开始时间</h4>
       <span>
           <input id="start selected" type="radio" name="start" value="male">现在
           <input id="start-later" type="radio" name="start" value="later"><label id="start-later-label" for="later">稍后/其他 </label><input id="start-later-date" class="radio-text" type="date"><input id="start-later-time" class="radio-text" type="time">
       </span>
     <h4>执行时间</h4>
-    
+
+<p><span id="copyarea">
+[[iframe https://lest-day.github.io/timer/timer.html#?<i id="output"></i> style="width: 500px; height: 250px; border: 0;"]]
+<br><br>
+<span class="templates">未完成</span>
+<span class="templates" style="display:none">未完成</span>
+<span class="templates" style="display:none">未完成</span>
+</span></p>
 <br><br><button id="copy">复制</button>
 <script>
 const templates = [];
