--- a/定时器/timer-selector.html
+++ b/定时器/timer-selector.html
@@ -16,11 +16,12 @@
       <select id="template">
          <option value=0>其他原因/自定义说明模板</option>
          <option value=1>删除页面：内容评分跌至 -2或以下</option>
-         <option value=2>删除页面：未表明使用的图像来源</option>
-         <option value=3>封禁用户：提及违规和不适宜内容</option>
-         <option value=3>封禁用户：引战内容造成严重影响</option>
-         <option value=4>封禁用户：对合著页面大规模破坏</option>
-         <option value=5>封禁用户：其他过激破坏网站行为</option>
+         <option value=2>删除页面：内容涉嫌抄袭</option>
+         <option value=3>删除页面：未表明使用图像的来源</option>
+         <option value=4>封禁用户：提及违规和不适宜内容</option>
+         <option value=5>封禁用户：引战内容造成严重影响</option>
+         <option value=6>封禁用户：对合著页面大规模破坏</option>
+         <option value=7>封禁用户：其他过激破坏网站行为</option>
        </select>
     <h4>开始时间</h4>
       <span>
