--- a/timer/timer-selector.html
+++ b/timer/timer-selector.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>欢迎！- 计时选择器</title>
   <link rel="stylesheet" href="https://lest-day.github.io/timer/timer-selector.css">
   <meta name="keywords" content="TLB,tlb,wiki,timer,selector">
 </head>
