--- a/TLB-DB/main.html
+++ b/TLB-DB/main.html
@@ -1,14 +1,14 @@
-<html lang="en"><head>
+<html lang="zh"><head>
         <meta charset="utf-8">
-        <title>Main - ScpperDB</title>
+        <title>Main - TLB-DB</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- Le styles -->
-        <link href="/css/jquery-ui.min.css" media="screen" rel="stylesheet" type="text/css">
-<link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
-<link href="/css/spinner.css" media="screen" rel="stylesheet" type="text/css">
-<link href="/css/style.css" media="screen" rel="stylesheet" type="text/css">
-<link href="/img/favicon.gif" rel="shortcut icon" type="image/vnd.microsoft.icon">        <!-- Scripts -->   
+        <link href="https://scpper.com//css/jquery-ui.min.css" media="screen" rel="stylesheet" type="text/css">
+<link href="https://scpper.com//css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
+<link href="https://scpper.com//css/spinner.css" media="screen" rel="stylesheet" type="text/css">
+<link href="https://scpper.com//css/style.css" media="screen" rel="stylesheet" type="text/css">
+<link href="https://scpper.com//img/favicon.gif" rel="shortcut icon" type="image/vnd.microsoft.icon">        <!-- Scripts -->   
 <!--        
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
@@ -21,11 +21,11 @@
         <script type="text/javascript" src="/js/date.format.js"></script>
 <!--[if lt IE 9]><script type="text/javascript" src="/js/html5shiv.min.js"></script><![endif]-->
 <!--[if lt IE 9]><script type="text/javascript" src="/js/respond.min.js"></script><![endif]-->
-<script type="text/javascript" src="/js/jquery.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/jquery-ui/jquery-ui.min.js"></script>
-<script type="text/javascript" src="/js/jquery.blockUI.js"></script>
-<script type="text/javascript" src="/js/scpper.js"></script>
+<script type="text/javascript" src="https://scpper.com//js/jquery.min.js"></script>
+<script type="text/javascript" src="https://scpper.com//js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://scpper.com//js/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="https://scpper.com//js/jquery.blockUI.js"></script>
+<script type="text/javascript" src="https://scpper.com//js/scpper.js"></script>
 <script type="text/javascript">
     //<!--
     
@@ -211,10 +211,8 @@
     <div class="col-sm-6 col-xs-8 col-sm-offset-3 col-xs-offset-2">                
         <div class="row tile-row">                        
             <div class="col-xs-12 tile-main" onclick="window.location.assign('https://scp-wiki-cn.wikidot.com')">
-                <h1>
-                    SCP基金会                </h1>
-                <span class="small-text">
-                    Updated 2022-10-07 12:42:07                </span>                    
+                <h1>时间轴书店</h1>
+                <span class="small-text">更新 2022-10-07 12:42:07</span>                    
             </div>            
         </div>
         <div class="row tile-row">
