--- a/断续器/main.html
+++ b/断续器/main.html
@@ -126,49 +126,11 @@
                     <div id="top-bar">
 			    <div class="top-bar" role="navigation">
 				    <ul>
-					    <li><a href="javascript:;">导航</a><ul>
+					    <li><a href="javascript:;">链接</a><ul>
 						    <li><a href="/most-recently-created-originate">最近新增的原创页面</a></li>
 						    <li><a href="/most-recently-created-handling">最近新增的搬运页面</a></li>
 						    <li><a href="/canon-hub">设定中心</a></li>
 						    <li><a href="/collab:members-pages">作者中心页</a></li>
-						    <li><a href="/character-centre">人设中心页</a></li>
-						    <li><a href="/contest-centre">竞赛中心页</a></li>
-						    <li><a href="/short-articles">超短篇中心</a></li>
-						    <li><a href="/archive-selected-articles">精品文章归档</a></li>
-						    <li><a href="/tgc:main">一间不起眼的小房间</a></li>
-						    </ul>
-					    </li>
-					    <li><a href="javascript:;">写作</a><ul>
-						    <li><a href="/how-to-write">如何在这里写一篇文章</a></li>
-						    <li><a href="/canon-hub">设定中心</a></li>
-						    <li><a href="/character-centre">人设中心页</a></li>
-						    <li><a href="/collab:members-pages">作者中心页</a></li>
-						    <li><a href="http://tlb-sandbox.wikidot.com" target="_blank">沙盒站</a></li>
-						    <li><a href="http://tlb-files.wikidot.com" target="_blank">附件站</a></li>
-						    <li><a href="/wiki-syntax">维基语法</a></li>
-						    <li><a href="/tag-guide">标签指导</a></li>
-						    <li><a href="/collab:folk-tag">民间标签列表</a></li>
-						    <li><a href="/movement-guide">搬运指南</a></li>
-						    </ul>
-					    </li>
-					    <li><a href="javascript:;">讨论</a><ul>
-						    <li><a href="/forum:start">讨论区</a></li>
-						    <li><a href="/collab:members-pages">作者页</a></li>
-						    <li><a href="/public:message-wall">留言墙</a></li>
-						    <li><a href="/cbox">聊天室</a></li>
-						    </ul>
-					    </li>
-					    <li><a href="javascript:;">指导</a><ul>
-						    <li><a href="/guide-hub">指导中心</a></li>
-						    <li><a href="/site-rules">必读！网站站规</a></li>
-						    <li><a href="/guide-for-newbies">新手指南</a></li>
-						    <li><a href="/how-to-write">怎样在本站写一篇文章</a></li>
-						    <li><a href="/movement-guide">搬运指南</a></li>
-						    <li><a href="/anti-plagiarism-policy">反抄袭政策</a></li>
-						    <li><a href="/deletions-guide">删文指导</a></li>
-						    <li><a href="/wiki-syntax">维基语法</a></li>
-						    <li><a href="/syntax-quick-reference">实用工具传送门</a></li>
-						    <li><a href="/links">链接</a></li>
 						    </ul>
 					    </li>
 					    <li><a href="/_admin">控制台</a></li>
@@ -179,7 +141,7 @@
 					    <p><a href="#side-bar">≡</a></p>
 				    </div>
 				    <ul>
-					    <li><a href="javascript:;">导航</a><ul>
+					    <li><a href="javascript:;">链接</a><ul>
 						    <li><a href="/most-recently-created-originate">最近新增的原创页面</a></li>
 						    <li><a href="/most-recently-created-handling">最近新增的搬运页面</a></li>
 						    <li><a href="/canon-hub">设定中心</a></li>
@@ -191,40 +153,6 @@
 						    <li><a href="/tgc:main">一间不起眼的小房间</a></li>
 						    </ul>
 					    </li>
-					    <li><a href="javascript:;">写作</a><ul>
-						    <li><a href="/how-to-write">如何在这里写一篇文章</a></li>
-						    <li><a href="/canon-hub">设定中心</a></li>
-						    <li><a href="/character-centre">人设中心页</a></li>
-						    <li><a href="/collab:members-pages">作者中心页</a></li>
-						    <li><a href="http://tlb-sandbox.wikidot.com" target="_blank">沙盒站</a></li>
-						    <li><a href="http://tlb-files.wikidot.com" target="_blank">附件站</a></li>
-						    <li><a href="/wiki-syntax">维基语法</a></li>
-						    <li><a href="/tag-guide">标签指导</a></li>
-						    <li><a href="/collab:folk-tag">民间标签列表</a></li>
-						    <li><a href="/movement-guide">搬运指南</a></li>
-						    </ul>
-					    </li>
-					    <li><a href="javascript:;">讨论
-						    </a><ul>
-						    <li><a href="/forum:start">讨论区</a></li>
-						    <li><a href="/collab:members-pages">作者页</a></li>
-						    <li><a href="/public:message-wall">留言墙</a></li>
-						    <li><a href="/cbox">聊天室</a></li>
-						    </ul>
-					    </li>
-					    <li><a href="javascript:;">指导
-						    </a><ul>
-						    <li><a href="/guide-hub">指导中心</a></li>
-						    <li><a href="/site-rules">必读！网站站规</a></li>
-						    <li><a href="/guide-for-newbies">新手指南</a></li>
-						    <li><a href="/how-to-write">怎样在本站写一篇文章</a></li>
-						    <li><a href="/movement-guide">搬运指南</a></li>
-						    <li><a href="/anti-plagiarism-policy">反抄袭政策</a></li>
-						   <li><a href="/deletions-guide">删文指导</a></li>
-						    <li><a href="/wiki-syntax">维基语法</a></li>
-						    <li><a href="/syntax-quick-reference">实用工具传送门</a></li>
-						    <li><a href="/links">链接</a></li>
-						    </ul>
 					    </li>
 					    <li><a href="https://github.com/lest-day/lest-day.github.io/edit/main/TLB-DB/main.html">控制台</a></il>
 				    </ul>
