--- a/staff-post-text-generator/text-generator.html
+++ b/staff-post-text-generator/text-generator.html
@@ -39,8 +39,9 @@
    </style>
   <script>
    var username
-   elem = document.getElementById("username"); 
-   elem.innerHTML = username; 
+   var username=getElementById("processed").value;
+   elem=document.getElementByid("username"); 
+   elem.innerHTML=username; 
    </script>
 </head>
    <fieldset>
